--- a/src/main/webapp/simulator/index.html
+++ b/src/main/webapp/simulator/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel= "stylesheet" type="text/css" href="style.css">
-    <title>Simulator </title>
+    <title>Simulator</title>
     <script src="engine.js"></script>
     <script src="scenario.js"></script>
 </head>
-<body onClick="textGame.nextPage()" id="body">
+<body>
     <div id="canvasDiv">
         <img id="backgroundImg" src="">
         <div id="leftImgDiv" class="ImgDiv"><img id="leftImg" src="" class="img"></div>
@@ -19,8 +19,8 @@
         <div id="textbar">
             <div id="nameBox"></div>
             <div id="chatBox" class="typewriter"></div>
-        <div>
+        </div>
     </div>
-    <script src="start.js"></script>
+    <script src="start.js" defer></script>
 </body>
 </html>
